--- a/html/02-CSS/01-odev-menu.html
+++ b/html/02-CSS/01-odev-menu.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENÜ OLUŞTURMA</title>
     
-    <link rel="stylesheet" href="assets/css/01odev-menu-aktif.css">
+    <link rel="stylesheet" href="assets/css/odev-menuolusturma.css">
    
    
 </head>
 <body>
-    
-    <div class="aktif"> ANASAYFA </div>
-    <div class="alt"> ÜRÜNLER </div>
-    <div class="alt"> BLOG </div>
-    <div class="alt"> İLETİŞİM </div>
-   
+    <nav>
+    <div class="aktif"><a href="#">ANASAYFA</a> </div>
+    <div class="alt"><a href="#"> ÜRÜNLER</a> </div>
+    <div class="alt"><a href="#"> BLOG</a> </div>
+    <div class="alt"><a href="#"> İLETİŞİM</a> </div>
+   </nav>
 </body>
 </html>
