--- a/html/02-CSS/bicimlendirme.html
+++ b/html/02-CSS/bicimlendirme.html
@@ -15,6 +15,13 @@
       <h1>MERHABA DÜNYA</h1>
     </div>
 
+  
+
+ 
+
+
+<audio controls src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/birds.mp3"></audio> 
+
     <div style=" font-size:1rem; text-align:left;">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos molestiae
       excepturi quibusdam recusandae! Perspiciatis eaque nulla reprehenderit
