--- a/html/02-CSS/senel-pratik/websafası.html
+++ b/html/02-CSS/senel-pratik/websafası.html
@@ -227,9 +227,11 @@ padding:0px 100px 0px 50px;
                 <li class="mynetim"><a href="#">Mynetim.Com</a></li> 
                     <li ><a href="#">Ana Sayfa</a></li>
                       <li><a href="#">Portfolyo</a>
-                          <ul>
-                            <li><a href="#">Alt Menu</a></li>
-                         </ul>    
+                        <div class="altmenu" >
+                             <ul>
+                                  <li><a href="#">Alt Menu</a></li>
+                            </ul>    
+                         </div>
                     </li>
                  <li><a href="#">Hakkımda</a></li>
                 <li class="iletisim"><a href="#">İletişim</a></li>
@@ -283,7 +285,11 @@ padding:0px 100px 0px 50px;
         
     </ul>
     </div>
-
+<table class="styled">
+  <tr> <th> Name </th> <th> Phone </th> </tr>
+  <tr> <td> Bill LaVarre </td> <td> 555-2987 </td> </tr>
+  <tr> <td> Waymon LaVarre </td> <td> 555-4673 </td> </tr> 
+</table>
     </div>
 </body>
 </html>
