--- a/html/02-CSS/28-FLEXBOX2.html
+++ b/html/02-CSS/28-FLEXBOX2.html
@@ -13,6 +13,8 @@
             background-color: gray;
             padding:1rem;
             height: 100vh;
+            gap:1rem;
+            flex-wrap:wrap;
         }
 
 
