--- a/html/02-CSS/senel-pratik/06-navbaryapimi.html
+++ b/html/02-CSS/senel-pratik/06-navbaryapimi.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/06-navbar-style.css">
+    <link rel="stylesheet" href="css/06-navbar-style.css" />
   </head>
   <body>
     <section class="menu">
       <div class="menu-ust">
-          <img src="../assets/img/logo.png">
+        <img src="../assets/img/logo.png" />
         <ul>
           <li><a href="#">ANA SAYFA</a></li>
           <li>
@@ -29,48 +29,42 @@
     </section>
 
     <section class="header">
-      <h1>ONLINE REKLAMLAR</h1>
+      <h1>HOŞGELDİNİZ</h1>
       <article>
-          <img src="../assets/img/about-us.png">
+        <img src="../assets/img/about-us.png" />
         <p>
-          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eos
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eos
             asperiores quasi nulla commodi minus illo tempore esse velit
             laboriosam ipsum necessitatibus perspiciatis non animi praesentium
-            facere ab, iusto illum.</span>
-            <span>
+            facere ab, iusto illum.</span
+          >
+          <span>
             Animi repudiandae soluta incidunt voluptatem suscipit sequi ullam
             alias eius explicabo cumque id officiis totam, voluptatibus nesciunt
             voluptatum fugiat repellendus est ut magni amet minima aliquid
-            deleniti. Expedita, atque impedit.</span>
-            <span>
+            deleniti. Expedita, atque impedit.</span
+          >
+          <span>
             Obcaecati, est necessitatibus. Nobis, facere voluptates asperiores
             obcaecati reprehenderit, magnam ad sit, repudiandae minima velit
             veniam consequatur? Veritatis totam repudiandae optio voluptates
             incidunt perferendis ea itaque exercitationem ipsa quaerat.
-            Repellendus?</span>
-          
+            Repellendus?</span
+          >
         </p>
       </article>
     </section>
 
     <section class="footer">
-        <div class="alt">
-            <img src="../assets/img/logo.png">
-             <ul>
-          <li><a href="#">ANA SAYFA</a></li>
-          <li>
-            <a href="#">ÜRÜNLER</a>
-            <ul>
-              <li><a href="#">SEO</a></li>
-              <li><a href="#">WEB TASARIM</a></li>
-              <li><a href="#">GRAFİK TASARIM</a></li>
-            </ul>
-          </li>
-          <li><a href="#">MİSYONUMUZ</a></li>
-          <li><a href="#">HAKKIMIZDA</a></li>
-          <li><a href="#">İLETİŞİM</a></li>
+      <div class="alt">
+        <img src="../assets/img/logo.png" />
+        <ul>
+          <li><a href="#">Mail</a></li>
+          <li><a href="#">Telefon</a></li>
+          <li><a href="#">form</a></li>
         </ul>
-        </div>
+      </div>
     </section>
   </body>
 </html>
