--- a/html/4-javascripts/Arrays-2.html
+++ b/html/4-javascripts/Arrays-2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,35 +7,48 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript">
-const meyveler=["elma","armut","muz","kivi"];
-
- meyveler.pop();
- console.log(meyveler);
- meyveler.push("ananas");
-console.log(meyveler);
-meyveler.shift();
-console.log(meyveler);    
-
-meyveler.unshift("çilek");
-console.log(meyveler); 
-
-meyveler.reverse();
-console.log(meyveler); 
-
-meyveler.sort();
-console.log(meyveler); 
-
-meyveler.sort((a,b)=>a.localeCompare(b,'tr')).reverse();
-console.log(meyveler); 
-
-meyveler.splice(0,1,"mustafa");
-console.log(meyveler); 
-
-const sayilar=[5,15,2,167];
-sayilar.sort((a,b) => a-b);
-console.log(sayilar); 
-
+    <select id="baslik">
+    </select>
+​
+​
+    <script>
+        const meyveler = ["Elma", "Armut", "Muz", "Kivi"];
+        console.log(meyveler);
+        meyveler.pop();
+        console.log(meyveler);
+        meyveler.push("Ananas");
+        console.log(meyveler);
+        meyveler.shift();
+        console.log(meyveler);
+        meyveler.unshift("Çilek");
+        console.log(meyveler);
+        meyveler.reverse();
+        console.log(meyveler);
+        meyveler.sort();
+        console.log(meyveler);
+        meyveler.sort( (a,b) =>  a.localeCompare(b, 'tr')).reverse();
+        console.log(meyveler);
+​
+        meyveler.splice(2,0,"Ayva","Elma","Muz");
+        console.log(meyveler);
+​
+​
+        document.querySelector("#baslik").innerHTML = "<option>" + meyveler.join("</option><option>") + "</option>";
+​
+​
+​
+​
+        const sayilar = [5, 14, 2, 167];
+        
+        sayilar.sort( (a,b) => a-b );
+​
+        console.log(sayilar);
+​
+​
+        const yeniDizi = meyveler.concat(sayilar, "M", "Ş", ["Ali", "Veli", "Ayşe"]);
+        console.log(yeniDizi);
+​
+​
     </script>
 </body>
 </html>
