--- a/html/4-javascripts/E-dizi.html
+++ b/html/4-javascripts/E-dizi.html
@@ -28,7 +28,12 @@
   },
 ];
 
+ 
 
+let ortalama=aday.reduce((toplam,item)=>{
+return (toplam + item.yas );
+},0);
+console.log(ortalama/aday.length );
     </script>
 </body>
 </html>
